--- a/Mehmet2/tests/data/.envtest
+++ b/Mehmet2/tests/data/.envtest
@@ -6,3 +6,6 @@ OPENAI_MODEL_TYPE='gpt-4'
 
 AZURE_SEARCH_ENDPOINT='<search_endpoint>'
 AZURE_SEARCH_KEY='<search_key>'
+
+AZURE_STORAGE_URL=''
+AZURE_STORAGE_KEY=''
