--- a/.github/workflows/test-info-extractor.yaml
+++ b/.github/workflows/test-info-extractor.yaml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   test-windows:
-    if: "!contains(github.event.head_commit.message, '(info-extract)')"
+    if: "contains(github.event.head_commit.message, '(info-extract)')"
     strategy:
       matrix:
         python-version: ["3.9", "3.12"]
@@ -24,7 +24,7 @@ jobs:
       - name: Check CLI
         run: python -m Mehmet2.run --help
   test-linux:
-    if: "!contains(github.event.head_commit.message, '(info-extract)')"
+    if: "contains(github.event.head_commit.message, '(info-extract)')"
     strategy:
       matrix:
         python-version: ["3.9", "3.12"]
