update .env.template and settings

--- a/Mehmet2/.env.template
+++ b/Mehmet2/.env.template
@@ -1,7 +1,13 @@
+# For help with retrieving your API keys and endpoints, see the following link below.
+# You may need to scroll up until you get to the "Retrieve required variables" section.
+# https://learn.microsoft.com/en-us/azure/ai-services/openai/use-your-data-quickstart?tabs=command-line%2Cpython&pivots=programming-language-python#retrieve-required-variables.
+# BASE_URL is another name for "endpoint"
 OPENAI_API_BASE_URL=''
 OPENAI_API_KEY=''
-OPENAI_API_VERSION=''
 OPENAI_API_DEPLOYMENT_ID=''
+# Azure OpenAI on your own data is only supported by the 2023-08-01-preview API version
+# Otherwise you can use the 2023-05-01 version
+OPENAI_API_VERSION='2023-08-01-preview'
 OPENAI_MODEL_TYPE='gpt-4'
 
 AZURE_SEARCH_ENDPOINT=''
