add code for matching between NCIt biomarker/prior therapies and codes

--- a/.gitignore
+++ b/.gitignore
@@ -149,3 +149,8 @@ results*.xlsx
 Thesaurus*.zip
 Thesaurus*.txt
 trial-*_2024*.csv
+code2term.tsv
+term-code.tsv
+preferred_terms*.csv
+ncit*concepts.tsv
+ncit-biomarker-concepts.xlsx
